@@ -1,3 +1,8 @@
+2005-03-15  John Luke  <john.luke@gmail.com>
+
+	* DockItem.cs: add comment about saving position
+	* DockPaned.cs: override OnChildPlacement
+
 2005-03-15  Lluis Sanchez Gual <lluis@novell.com>
 
 	* DockItemGrip.cs: Redraw the grip if the title or the icon changes.
